--- a/app/views/administrate/application/_collection.html.erb
+++ b/app/views/administrate/application/_collection.html.erb
@@ -26,9 +26,8 @@ to display a collection of resources in an HTML table.
         cell-label--<%= attr_type.html_class %>
         cell-label--<%= collection_presenter.ordered_html_class(attr_name) %>
         " scope="col">
-        <%= link_to(params.merge(
-          collection_presenter.order_params_for(attr_name)
-        )) do %>
+        <%= link_to(collection_presenter.permitted_params(attr_name, params)) do %>
+            <%= attr_name.to_s.titleize %>
         <%= t(
           "helpers.label.#{resource_name}.#{attr_name}",
           default: attr_name.to_s,
